<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    tools:context=".fragments.SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/signup_banner"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:importantForAccessibility="no"
            android:src="@drawable/banner"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin49"
            android:layout_marginTop="@dimen/margin300"
            android:layout_marginEnd="@dimen/margin49"
            android:background="@color/kodecamp_green_100"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/signup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginEnd="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/sign_up"
                android:textSize="@dimen/text30"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/signup_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginEnd="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/signup_welcome_text"
                android:textSize="@dimen/text16"
                android:textStyle="normal"
                android:textColor="@color/white"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginEnd="@dimen/margin20"
                android:layout_marginTop="@dimen/margin20"
                android:autofillHints="name"
                android:hint="@string/first_name"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/kodecamp_blue_50"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginEnd="@dimen/margin20"
                android:layout_marginTop="@dimen/margin20"
                android:autofillHints="name"
                android:hint="@string/last_name"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/kodecamp_blue_50"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginEnd="@dimen/margin20"
                android:layout_marginTop="@dimen/margin20"
                android:autofillHints="name"
                android:hint="@string/username"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/kodecamp_blue_50"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginEnd="@dimen/margin20"
                android:layout_marginTop="@dimen/margin20"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/kodecamp_blue_50"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginEnd="@dimen/margin20"
                android:layout_marginTop="@dimen/margin20"
                android:autofillHints="password"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/kodecamp_green_100">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/kodecamp_blue_50"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginEnd="@dimen/margin20"
                android:layout_marginTop="@dimen/margin20"
                android:text="@string/sign_up"
                android:textSize="@dimen/text16"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/signup_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginEnd="@dimen/margin20"
                android:layout_marginTop="@dimen/margin20"
                android:text="@string/signup_footer_text"
                android:textSize="@dimen/text16"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="normal"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>