<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context=".fragments.SignIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/signin_banner"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/onboarding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin49"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/text30"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/signin_banner"
            app:layout_constraintTop_toBottomOf="@id/signin_banner" />

        <TextView
            android:id="@+id/signin_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_welcome_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text16"
            app:layout_constraintStart_toStartOf="@id/signin_text"
            app:layout_constraintTop_toBottomOf="@id/signin_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin49"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginEnd="@dimen/margin49"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            app:layout_constraintStart_toStartOf="@id/signin_text"
            app:layout_constraintTop_toBottomOf="@id/signin_welcome">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin49"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginEnd="@dimen/margin49"
            android:autofillHints="password"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="@id/signin_text"
            app:layout_constraintTop_toBottomOf="@id/signin_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signin_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/margin49"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginEnd="@dimen/margin49"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="@dimen/text16"
            app:layout_constraintTop_toBottomOf="@id/signin_password" />

        <TextView
            android:id="@+id/signin_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/signin_footer_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text16"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/signin_button"
            app:layout_constraintStart_toStartOf="@id/signin_button"
            app:layout_constraintTop_toBottomOf="@id/signin_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>